--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="assets/styles/main.css?v=0.1">
+    <link rel="stylesheet" href="assets/styles/main.css?v=0.2">
     <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.1">
 
-    <title>Oson Sugʻurta</title>
+    <title>ePolis</title>
 </head>
 
 <body>
@@ -289,7 +289,8 @@
                                 <div class="calculator-w d-flex align-items-center justify-content-center">
                                     <img class="w-100" src="assets/images/ingo-logo.png" alt="Logo">
                                 </div>
-                                <p class="fs-6 fw-bold text-black text-center text-sm-end ms-lg-5 ms-sm-4 ms-0">UZS 168,000</p>
+                                <p class="fs-6 fw-bold text-black text-center text-sm-end ms-lg-5 ms-sm-4 ms-0">UZS
+                                    168,000</p>
                             </div>
                         </div>
                         <div class="col-12 col-lg-6">
@@ -297,7 +298,8 @@
                                 <div class="calculator-w d-flex align-items-center justify-content-center">
                                     <img class="w-100" src="assets/images/kapital-logo.png" alt="Logo">
                                 </div>
-                                <p class="fs-6 fw-bold text-black text-center text-sm-end ms-lg-5 ms-sm-4 ms-0">UZS 168,000</p>
+                                <p class="fs-6 fw-bold text-black text-center text-sm-end ms-lg-5 ms-sm-4 ms-0">UZS
+                                    168,000</p>
                             </div>
                         </div>
                     </div>
@@ -305,6 +307,39 @@
             </div>
         </div>
     </section>
+
+    <!--==================== LITRO APP | Omonjon ====================-->
+    <section class="litro-app py-5 mt-lg-5 mt-md-4 mt-0">
+        <div class="container">
+            <div class="row row-gap-5">
+                <div class="col-12 col-xl-5 col-lg-6">
+                    <div class="d-flex flex-column justify-content-center h-100">
+                        <h4 class="text-center text-lg-start text-secondary display-5 fw-bold">Explore Opportunities with Litro App</h4>
+                        <p class="text-center text-lg-start fs-7 text-secondary fw-normal mt-4 pb-5 border-bottom border-1">In blandit luctus proin mauris a commodo, dolor diam tempus, aenean magna fusce eu.
+                            Id porttitor aliquam eget aliquet sagittis eu aut diam ut phasellus sed convallis iaculis
+                            neque ultricies convallis sed enim.</p>
+                        <div class="d-flex flex-column flex-sm-row align-items-center justify-content-between mt-5 row-gap-3">
+                            <div class="d-flex flex-column row-gap-1">
+                                <h5 class="text-secondary text-center text-sm-start fw-bold display-3">23%</h5>
+                                <p class="text-secondary text-center text-sm-start fw-normal fs-7">Nulla venenatis everys</p>
+                            </div>
+                            <div class="d-flex flex-column row-gap-1">
+                                <h5 class="text-secondary text-center text-sm-start fw-bold display-3">132b</h5>
+                                <p class="text-secondary text-center text-sm-start fw-normal fs-7">Dictum in marko elementum</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 d-none d-xl-block"></div>
+                <div class="col-12 col-xl-5 col-lg-6">
+                    <div class="d-flex">
+                        <img src="assets/images/litro-app.png" alt="Picture" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 <!--================ FOOTER | Omonjon ================-->
@@ -322,7 +357,7 @@
 <script src="assets/script/bootstrap.bundle.min.js"></script>
 
 <!--================ MAIN JS | Omonjon ================-->
-<script src="assets/script/main.js?v=0.1"></script>
+<script src="assets/script/main.js?v=0.2"></script>
 </body>
 
 </html>
