How Work section 70% done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="assets/styles/main.css?v=0.2">
+    <link rel="stylesheet" href="assets/styles/main.css?v=0.3">
     <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.1">
 
     <title>ePolis</title>
@@ -78,7 +78,7 @@
                     <li class="nav-item">
                         <a class="transition primary-hover opacity-7 fs-7 fw-bold text-white"
                            aria-current="page" href="#!">
-                            Travel
+                            TRAVEL
                         </a>
                     </li>
                 </ul>
@@ -314,18 +314,22 @@
             <div class="row row-gap-5">
                 <div class="col-12 col-xl-5 col-lg-6">
                     <div class="d-flex flex-column justify-content-center h-100">
-                        <h4 class="text-center text-lg-start text-secondary display-5 fw-bold">Explore Opportunities with Litro App</h4>
-                        <p class="text-center text-lg-start fs-7 text-secondary fw-normal mt-4 pb-5 border-bottom border-1">In blandit luctus proin mauris a commodo, dolor diam tempus, aenean magna fusce eu.
+                        <h4 class="text-center text-lg-start text-secondary display-5 fw-bold">Explore Opportunities
+                            with Litro App</h4>
+                        <p class="text-center text-lg-start fs-7 text-secondary fw-normal mt-4 pb-5 border-bottom border-1">
+                            In blandit luctus proin mauris a commodo, dolor diam tempus, aenean magna fusce eu.
                             Id porttitor aliquam eget aliquet sagittis eu aut diam ut phasellus sed convallis iaculis
                             neque ultricies convallis sed enim.</p>
                         <div class="d-flex flex-column flex-sm-row align-items-center justify-content-between mt-5 row-gap-3">
                             <div class="d-flex flex-column row-gap-1">
                                 <h5 class="text-secondary text-center text-sm-start fw-bold display-3">23%</h5>
-                                <p class="text-secondary text-center text-sm-start fw-normal fs-7">Nulla venenatis everys</p>
+                                <p class="text-secondary text-center text-sm-start fw-normal fs-7">Nulla venenatis
+                                    everys</p>
                             </div>
                             <div class="d-flex flex-column row-gap-1">
                                 <h5 class="text-secondary text-center text-sm-start fw-bold display-3">132b</h5>
-                                <p class="text-secondary text-center text-sm-start fw-normal fs-7">Dictum in marko elementum</p>
+                                <p class="text-secondary text-center text-sm-start fw-normal fs-7">Dictum in marko
+                                    elementum</p>
                             </div>
                         </div>
                     </div>
@@ -334,6 +338,69 @@
                 <div class="col-12 col-xl-5 col-lg-6">
                     <div class="d-flex">
                         <img src="assets/images/litro-app.png" alt="Picture" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--==================== HOW WORK | Omonjon ====================-->
+    <section class="how-work py-5">
+        <div class="container">
+            <h4 class="text-center text-secondary fs-1 fw-bold">How Does It Work?</h4>
+            <div class="d-flex justify-content-center">
+                <p class="text-center text-secondary fw-normal fs-7 mt-3" style="max-width: 576px; width: 100%;">Lorem
+                    ipsum dolor sit amet, consectetur adipiscing elit
+                    volutpat mollis egestas nam luctus facilisis ultrices</p>
+            </div>
+            <div class="row pt-5 row-gap-3 justify-content-center">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="d-flex flex-column align-items-center position-relative">
+                        <div class="d-flex justify-content-center align-items-center z-index-5">
+                            <img src="./assets/images/step-1.png" alt="Step">
+                        </div>
+                        <h5 class="fs-4 text-secondary fw-bold text-center mt-4 mb-3">Choose city</h5>
+                        <p class="fs-7 text-secondary fw-normal text-center">Massa enim libero dictumst consectetur in
+                            convallis lobortis </p>
+                        <div class="d-lg-block d-none position-absolute z-index-1 line-position">
+                            <img src="./assets/images/svg/line.svg" alt="Line">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="d-flex flex-column align-items-center position-relative">
+                        <div class="d-flex justify-content-center align-items-center z-index-5">
+                            <img src="./assets/images/step-2.png" alt="Step">
+                        </div>
+                        <h5 class="fs-4 text-secondary fw-bold text-center mt-4 mb-3">Your car details</h5>
+                        <p class="fs-7 text-secondary fw-normal text-center">Massa enim libero dictumst consectetur in
+                            convallis lobortis</p>
+                        <div class="d-lg-block d-none position-absolute z-index-1 line-position">
+                            <img src="./assets/images/svg/line.svg" alt="Line">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="d-flex flex-column align-items-center position-relative">
+                        <div class="d-flex justify-content-center align-items-center z-index-5">
+                            <img src="./assets/images/step-3.png" alt="Step">
+                        </div>
+                        <h5 class="fs-4 text-secondary fw-bold text-center mt-4 mb-3">Service </h5>
+                        <p class="fs-7 text-secondary fw-normal text-center">At ultricies id non quisque integer eget
+                            velit. Facilisis enim </p>
+                        <div class="d-lg-block d-none position-absolute z-index-1 line-position">
+                            <img src="./assets/images/svg/line.svg" alt="Line">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="d-flex flex-column align-items-center position-relative">
+                        <div class="d-flex justify-content-center align-items-center z-index-5">
+                            <img src="./assets/images/step-4.png" alt="Step">
+                        </div>
+                        <h5 class="fs-4 text-secondary fw-bold text-center mt-4 mb-3">Payment</h5>
+                        <p class="fs-7 text-secondary fw-normal text-center">Pellentesque rhoncus viverra vestibulum,
+                            purus purus </p>
                     </div>
                 </div>
             </div>
