Video player done

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="assets/styles/main.css?v=0.3">
-    <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.1">
+    <link rel="stylesheet" href="assets/styles/main.css?v=0.4">
+    <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.2">
 
     <title>ePolis</title>
 </head>
@@ -348,7 +348,7 @@
     <section class="how-work py-5">
         <div class="container">
             <h4 class="text-center text-secondary fs-1 fw-bold">How Does It Work?</h4>
-            <div class="d-flex justify-content-center">
+            <div class="d-flex justify-c1ntent-center">
                 <p class="text-center text-secondary fw-normal fs-7 mt-3" style="max-width: 576px; width: 100%;">Lorem
                     ipsum dolor sit amet, consectetur adipiscing elit
                     volutpat mollis egestas nam luctus facilisis ultrices</p>
@@ -404,6 +404,18 @@
                     </div>
                 </div>
             </div>
+            <div class="d-flex mt-4">
+                <div class="video__content w-100">
+                    <video id="video-file" muted style="width: 100% !important; max-height: 679px; height: 100%;background: #1B9CAA;"
+                           poster="assets/images/poster.png">
+                        <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-1080p.mp4"
+                                type="video/mp4">
+                    </video>
+                    <button class="button button--flex border-none outline-none video__button" id="video-button">
+                        <i class="bx bx-play video__button-icon" id="video-icon"></i>
+                    </button>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -424,7 +436,7 @@
 <script src="assets/script/bootstrap.bundle.min.js"></script>
 
 <!--================ MAIN JS | Omonjon ================-->
-<script src="assets/script/main.js?v=0.2"></script>
+<script src="assets/script/main.js?v=0.3"></script>
 </body>
 
 </html>
