--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="assets/styles/main.css?v=0.4">
+    <link rel="stylesheet" href="assets/styles/main.css?v=0.5">
     <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.2">
 
     <title>ePolis</title>
@@ -348,7 +348,7 @@
     <section class="how-work py-5">
         <div class="container">
             <h4 class="text-center text-secondary fs-1 fw-bold">How Does It Work?</h4>
-            <div class="d-flex justify-c1ntent-center">
+            <div class="d-flex justify-content-center">
                 <p class="text-center text-secondary fw-normal fs-7 mt-3" style="max-width: 576px; width: 100%;">Lorem
                     ipsum dolor sit amet, consectetur adipiscing elit
                     volutpat mollis egestas nam luctus facilisis ultrices</p>
@@ -406,7 +406,8 @@
             </div>
             <div class="d-flex mt-4">
                 <div class="video__content w-100">
-                    <video id="video-file" muted style="width: 100% !important; max-height: 679px; height: 100%;background: #1B9CAA;"
+                    <video id="video-file" muted
+                           style="width: 100% !important; max-height: 679px; height: 100%;background: #edf3fa;"
                            poster="assets/images/poster.png">
                         <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-1080p.mp4"
                                 type="video/mp4">
@@ -419,10 +420,73 @@
         </div>
     </section>
 
+    <!--==================== ORDERS | Omonjon ====================-->
+    <section class="order-section py-5">
+        <div class="container">
+            <div class="d-flex rounded-3 bg-secondary p-5">
+                <div class="row row-gap-4">
+                    <div class="col-12 col-xl-5 col-lg-6">
+                        <div class="d-flex flex-column align-items-center align-items-lg-start row-gap-4 row-gap-lg-5">
+                            <h6 class="fs-1 text-white fw-bold text-lg-start text-center">Let's order your first service
+                                easier now!</h6>
+                            <a class="btn w-max-content btn-primary py-2 px-4" href="#!">Call now</a>
+                        </div>
+                    </div>
+                    <div class="col-xl-1 d-none d-xl-block"></div>
+                    <div class="col-12 col-xl-6 col-lg-6">
+                        <div class="d-flex flex-column row-gap-2">
+                            <p class="fs-6 text-gray fw-normal d-flex align-items-start justify-content-center justify-content-lg-start text-center text-lg-start">
+                                <img class="me-2 d-none d-lg-flex" src="assets/images/svg/check.svg"
+                                     alt="">Purus vestibulum pharetra amet tincidunt
+                                pretium</p>
+                            <p class="fs-6 text-gray fw-normal d-flex align-items-start justify-content-center justify-content-lg-start text-center text-lg-start">
+                                <img class="me-2 d-none d-lg-flex" src="assets/images/svg/check.svg"
+                                     alt="">Haretra justo magna pharetra dui gravida sed
+                                nec</p>
+                            <p class="fs-6 text-gray fw-normal d-flex align-items-start justify-content-center justify-content-lg-start text-center text-lg-start">
+                                <img class="me-2 d-none d-lg-flex" src="assets/images/svg/check.svg"
+                                     alt="">Venenatis risus faucibus volutpat amet
+                                feugiat a</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 <!--================ FOOTER | Omonjon ================-->
-
+<footer class="footer py-5 bg-secondary">
+    <div class="container">
+        <div class="d-flex flex-column align-items-center row-gap-4">
+            <a href="#!" class="mb-4"><img src="./assets/images/svg/site-logo.svg" alt="" class=""></a>
+            <ul class="d-flex flex-wrap justify-content-center column-gap-4 column-gap-lg-5 row-gap-3">
+                <li><a href="#!" class="fs-7 fw-bold text-white">OSAGO</a></li>
+                <li><a href="#!" class="fs-7 fw-bold text-white">KASKO</a></li>
+                <li><a href="#!" class="fs-7 fw-bold text-white">Travel</a></li>
+                <li><a href="#!" class="text-danger fs-7 fw-bold">SOS</a></li>
+            </ul>
+            <ul class="d-flex flex-wrap justify-content-center column-gap-4 row-gap-3 mt-4 mb-4">
+                <li><a href="#!" class=""><img src="./assets/images/appstore.png" alt="" class=""></a></li>
+                <li><a href="#!" class=""><img src="./assets/images/googleplay.png" alt="" class=""></a></li>
+            </ul>
+            <ul class="d-flex flex-wrap justify-content-center column-gap-3 row-gap-3 mb-5">
+                <li><a href="#!" class="footer-linkBg d-flex align-items-center justify-content-center rounded-2"><img
+                        src="./assets/images/svg/facebook.svg" alt="" class=""></a></li>
+                <li><a href="#!" class="footer-linkBg d-flex align-items-center justify-content-center rounded-2"><img
+                        src="./assets/images/svg/instagram.svg" alt="" class=""></a></li>
+                <li><a href="#!" class="footer-linkBg d-flex align-items-center justify-content-center rounded-2"><img
+                        src="./assets/images/svg/x.svg" alt="" class=""></a></li>
+                <li><a href="#!" class="footer-linkBg d-flex align-items-center justify-content-center rounded-2 bg-white"><img
+                        src="./assets/images/svg/youtube.svg" alt="" class=""></a></li>
+            </ul>
+            <p class="fs-8 text-gray fw-normal text-center" style="max-width: 855px;width: 100%;">2021. All rights reserved. Pulvinar urna condimentum amet tempor, ornare integer. Lorem odio
+                justo malesuada suspendisse viverra aliquet quisque turpis non. Feugiat in odio non nunc ornare
+                consectetur.</p>
+        </div>
+    </div>
+</footer>
 
 <!--================ SCROLL UP | Omonjon ================-->
 <a href="#" class="scroll_up" id="scroll-up">
