Orders section bag fixed

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <div class="d-flex rounded-3 bg-secondary p-5">
                 <div class="row row-gap-4">
                     <div class="col-12 col-xl-5 col-lg-6">
-                        <div class="d-flex flex-column align-items-center align-items-lg-start row-gap-4 row-gap-lg-5">
+                        <div class="d-flex flex-column align-items-center align-items-lg-start row-gap-4 row-gap-lg-5 ps-xl-5">
                             <h6 class="fs-1 text-white fw-bold text-lg-start text-center">Let's order your first service
                                 easier now!</h6>
                             <a class="btn w-max-content btn-primary py-2 px-4" href="#!">Call now</a>
