--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
 
     <!--================ STYLE CSS | Omonjon ================-->
-    <link rel="stylesheet" href="assets/styles/main.css?v=0.6">
-    <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.3">
+    <link rel="stylesheet" href="assets/styles/main.css?v=0.7">
+    <link rel="stylesheet" href="assets/styles/breakpoints.css?v=0.4">
 
     <title>EpolisPlus</title>
 </head>
@@ -626,34 +626,35 @@
                 <div class="tab-pane fade" id="osago-tab-pane" role="tabpanel"
                      aria-labelledby="profile-tab"
                      tabindex="0">
-                    <form class="col-xl-11 mx-auto mb-xl-4 pb-5" action="" method="post">
-                        <div class="row justify-content-center row-gap-3">
-                            <div class="col-12 col-xl-3 col-sm-4">
-                                <label for="exampleInputEmail2" class="form-label fs-8 text-light-emphasis">Гос номер <span
-                                        class="text-secondary">*</span></label>
-                                <input required type="text" autocomplete="off" class="form-control"
+                    <form class="container-mini mx-auto mb-xl-4 pb-5" action="" method="post">
+                        <div class="d-flex row-gap-3 justify-content-center flex-wrap">
+                            <div class="car-num me-sm-2">
+                                <label for="exampleInputEmail2" class="form-label fs-8 text-light-emphasis">Гос номер
+                                    <span
+                                            class="text-secondary">*</span></label>
+                                <input required type="text" autocomplete="off" class="form-control text-black"
                                        id="exampleInputEmail2" placeholder="01M571SA"
                                        aria-describedby="emailHelp">
                             </div>
-                            <div class="col-12 col-xl-1 col-sm-2 tech-pas">
+                            <div class="tech-pas ms-sm-1 me-2">
                                 <label for="exampleInputPassword3"
                                        class="form-label fs-8 text-light-emphasis ">Серия и номер тех. паспорта<span
                                         class="text-secondary">*</span></label>
-                                <input required type="text" autocomplete="off" class="form-control"
+                                <input required type="text" autocomplete="off" class="form-control text-black"
                                        placeholder="AAG" id="exampleInputPassword3">
                             </div>
-                            <div class="col-12 col-xl-3 col-sm-3">
+                            <div class="tech-pas-num me-md-2">
                                 <label for="exampleInputPassword7"
-                                       class="form-label fs-8 text-light-emphasis invisible">Серия и номер тех. паспорта<span
+                                       class="form-label fs-8 text-light-emphasis invisible">x<span
                                         class="text-secondary">*</span></label>
-                                <input required type="text" autocomplete="off" class="form-control"
+                                <input required type="text" autocomplete="off" class="form-control text-black"
                                        placeholder="9999999" id="exampleInputPassword7">
                             </div>
-                            <div class="col-12 col-xl-3 col-sm-4">
+                            <div class="ins-type ms-md-1 me-2">
                                 <label for="exampleInputPassword4"
                                        class="form-label fs-8 text-light-emphasis">Количество водителей <span
                                         class="text-secondary">*</span></label>
-                                <select class="form-select" id="exampleInputPassword4"
+                                <select class="form-select text-black" id="exampleInputPassword4"
                                         aria-label="Default select example" required>
                                     <option selected value="">Select</option>
                                     <option value="1">One</option>
@@ -661,17 +662,19 @@
                                     <option value="3">Three</option>
                                 </select>
                             </div>
-                            <div class="col-12 col-xl-2 col-sm-4">
-                                <div class="d-flex align-items-start flex-column">
+                            <div class="calc-btn ms-1">
+                                <div class="d-flex align-items-end flex-column">
                                     <span class="form-label fs-8 text-light-emphasis invisible">hide</span>
-                                    <button type="submit" class="btn btn-primary primary-radius transition fs-7 fw-bold">Расчет
+                                    <button type="submit"
+                                            class="btn btn-primary primary-radius transition fs-7 fw-bold">Расчет
                                     </button>
                                 </div>
                             </div>
                         </div>
                     </form>
-                    <div class="partners-box primary-radius border-dashed border-1 p-3 mx-auto">
-                        <h4 class="text-black pb-3 border-bottom-dashed text-center mb-3 w-100">Наши страховые партнеры</h4>
+                    <div class="container-mini primary-radius border-dashed border-1 p-3 mx-auto">
+                        <h4 class="text-black pb-3 border-bottom-dashed text-center mb-3 w-100">Наши страховые
+                            партнеры</h4>
                         <div class="swiper partnersSwiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
@@ -684,6 +687,30 @@
                                         <img src="./assets/images/svg/partner2.svg" alt="">
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Hide Block -->
+                    <div class="container-mini mx-auto d-flex align-items-sm-start align-items-center flex-column pt-3 row-gap-3 border-top-dashed d-none">
+                        <h4 class="fs-5 fw-semibold text-block text-sm-start text-center mt-3">Результаты</h4>
+                        <div class="d-flex calc-result justify-content-sm-between justify-content-center flex-wrap align-items-center primary-radius bg-white row-gap-2 column-gap-3 w-100">
+                            <div class="calc-result-img">
+                                <img class="w-100 h-100" src="./assets/images/svg/partner2.svg" alt="">
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <p class="text-light-emphasis">1 год</p>
+                                <h5 class="fw-semibold fs-7 text-black ms-4 me-3">UZS 168,000</h5>
+                                <a href="#" class="btn btn-primary primary-radius fw-semibold text-white fs-8 ms-3">Купить</a>
+                            </div>
+                        </div>
+                        <div class="d-flex calc-result justify-content-sm-between justify-content-center flex-wrap align-items-center primary-radius bg-white row-gap-2 column-gap-3 w-100">
+                            <div class="calc-result-img">
+                                <img class="w-100 h-100" src="./assets/images/svg/partner1.svg" alt="">
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <p class="text-light-emphasis">1 год</p>
+                                <h5 class="fw-semibold fs-7 text-black ms-4 me-3">UZS 168,000</h5>
+                                <a href="#" class="btn btn-primary primary-radius fw-semibold text-white fs-8 ms-3">Купить</a>
                             </div>
                         </div>
                     </div>
@@ -823,7 +850,7 @@
     <section class="partners-section">
         <div class="container">
             <div class="partner-box mb-5 pb-lg-5">
-                <div class="partners-box primary-radius border-dashed border-1 p-3 mx-auto">
+                <div class="container-mini primary-radius border-dashed border-1 p-3 mx-auto">
                     <h4 class="text-black pb-3 border-bottom-dashed text-center mb-3 w-100">Наши страховые партнеры</h4>
                     <div class="swiper partnersSwiper">
                         <div class="swiper-wrapper">
